--- a/starter_files/style.css
+++ b/starter_files/style.css
@@ -18,6 +18,8 @@ header {
   background-color: #ff8523;
   margin-bottom: 3px;
   padding: 20px;
+  border-width: 5pt;
+  border-color: #ff8523;
 }
 
 /*Moves the logo*/
@@ -30,8 +32,11 @@ header {
 ul > li{
   font-style: normal;
   font-weight: bold;
-  padding: 5px;
+  padding: 3px;
   font-size: 1.1em;
+  border-bottom: grey;
+  padding-bottom: 6pt;
+  border-width: 3pt;
 }
 
 /*Gives the navigation words a white outline container*/
@@ -138,7 +143,7 @@ tr > td {
     border-width: 0px;
     border-style: solid;
     border-color: white;
-    max-width: 45%;
+    max-width: 85%;
     margin-left: 10px;
     margin-top: 10px;
     border-radius: 10px;
